# zugferd-code-lists

./: .gitignore  Cargo.toml  LICENSE  Makefile  generate_exports.py  generating.md  pyproject.toml  readme.md  remove_spaces.py  requirements.txt
py_generate/: __main__.py  common.py  find_package_src.py  gen_try_from.py  generate_exports.py  repeated_code.py  sheets.py  templates.py
py_generate/rendering/: __init__.py  gen_try_from.py  templates.py  version_conversion.py
spec/: readmd.md
spec/zugferd_2_3_2/: readme.md
spec/zugferd_2_3_3/: readme.md
src/: lib.rs
src/zugferd_2_3_2/: allowance.rs  characteristic.rs  charge.rs  country.rs  currency.rs  date.rs  eas.rs  enum1001.rs  enum1153.rs  enum5305.rs  filename.rs  hybridconformance.rs  hybriddocument.rs  hybridversion.rs  icd.rs  incoterms.rs  item.rs  language.rs  linereason.rs  linestatus.rs  mime.rs  mod.rs  payment.rs  text.rs  transport.rs  unit.rs  vatcat.rs  vatex.rs
src/zugferd_2_3_3/: allowance.rs  characteristic.rs  charge.rs  country.rs  currency.rs  date.rs  eas.rs  enum1001.rs  enum1153.rs  enum5305.rs  filename.rs  fiscalid.rs  hybridconformance.rs  hybriddocument.rs  hybridversion.rs  icd.rs  incoterms.rs  item.rs  language.rs  linereason.rs  linestatus.rs  mime.rs  mod.rs  payment.rs  text.rs  timecii.rs  transport.rs  unit.rs  vatcat.rs  vatex.rs
src/zugferd_2_4/: allowance.rs  charge.rs  country.rs  currency.rs  eas.rs  enum1001.rs  enum1153.rs  enum5305.rs  icd.rs  item.rs  mime.rs  mod.rs  payment.rs  text.rs  timecii.rs  unit.rs  vatex.rs
ts/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
ts/src/zugferd_2_3_2/: allowance.ts  characteristic.ts  country.ts  currency.ts  date.ts  eas.ts  enum1001.ts  enum1153.ts  filename.ts  hybridconformance.ts  hybriddocument.ts  hybridversion.ts  icd.ts  index.ts  item.ts  linereason.ts  payment.ts  unit.ts  vatcat.ts  vatex.ts
ts/src/zugferd_2_3_3/: allowance.ts  characteristic.ts  charge.ts  country.ts  currency.ts  date.ts  eas.ts  enum1001.ts  enum1153.ts  enum5305.ts  filename.ts  fiscalid.ts  hybridconformance.ts  hybriddocument.ts  hybridversion.ts  icd.ts  incoterms.ts  index.ts  item.ts  language.ts  linereason.ts  linestatus.ts  mime.ts  payment.ts  text.ts  timecii.ts  transport.ts  unit.ts  vatcat.ts  vatex.ts
ts/src/zugferd_2_4/: allowance.ts  charge.ts  country.ts  currency.ts  eas.ts  enum1001.ts  enum1153.ts  icd.ts  index.ts  item.ts  mime.ts  timecii.ts  unit.ts  vatex.ts
