[package]
name = "zugferd-code-lists"
version = "0.1.12"
edition = "2021"
homepage = "https://github.com/hydrogen602/zugferd-code-lists"
description = "ZUGFeRD code lists, e.g. languages enum, currencies enum, countries enum, etc."
license = "MIT"
repository = "https://github.com/hydrogen602/zugferd-code-lists"
keywords = ["ZUGFeRD", "code-lists", "Factur-X"]
readme = "readme.md"

exclude = ["requirements.txt", "py_generate/*", "generating.md", "ts/*"]

[dependencies]
iso_country = { version = "0.1.4", optional = true }
iso_currency = { version = "0.5.3", optional = true }

[features]
all = ["iso_country", "iso_currency"]
